--- a/gallery-styles.css
+++ b/gallery-styles.css
@@ -65,7 +65,7 @@
 }
 
 .gallery-title {
-    font-family: 'Old English Text MT', 'Blackletter', serif;
+    font-family: 'UnifrakturMaguntia', 'Old English Text MT', 'Blackletter', cursive;
     font-size: 1.5rem;
     font-weight: 600;
     color: #169B62;
