--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'UnifrakturMaguntia', 'Old English Text MT', 'Blackletter', cursive;
+    font-family: 'Old English Text MT', 'UnifrakturMaguntia', 'Blackletter', cursive;
     line-height: 1.6;
     color: #333;
     background-color: #fafafa;
@@ -41,7 +41,7 @@ body {
 }
 
 .logo {
-    font-family: 'UnifrakturMaguntia', 'Old English Text MT', 'Blackletter', cursive;
+    font-family: 'Old English Text MT', 'UnifrakturMaguntia', 'Blackletter', cursive;
     font-size: 2rem;
     font-weight: 700;
     color: #169B62;
@@ -184,7 +184,7 @@ body {
 }
 
 .hero-title {
-    font-family: 'UnifrakturMaguntia', 'Old English Text MT', 'Blackletter', cursive;
+    font-family: 'Old English Text MT', 'UnifrakturMaguntia', 'Blackletter', cursive;
     font-size: 3rem;
     font-weight: 700;
     margin-bottom: 1rem;
@@ -198,7 +198,7 @@ body {
 
 /* Section Titles */
 .section-title {
-    font-family: 'UnifrakturMaguntia', 'Old English Text MT', 'Blackletter', cursive;
+    font-family: 'Old English Text MT', 'UnifrakturMaguntia', 'Blackletter', cursive;
     font-size: 2.5rem;
     font-weight: 600;
     text-align: center;
@@ -302,7 +302,7 @@ body {
 }
 
 .collection-title {
-    font-family: 'UnifrakturMaguntia', 'Old English Text MT', 'Blackletter', cursive;
+    font-family: 'Old English Text MT', 'UnifrakturMaguntia', 'Blackletter', cursive;
     font-size: 1.6rem;
     font-weight: 600;
     color: #169B62;
@@ -384,7 +384,7 @@ body {
 }
 
 .art-title {
-    font-family: 'UnifrakturMaguntia', 'Old English Text MT', 'Blackletter', cursive;
+    font-family: 'Old English Text MT', 'UnifrakturMaguntia', 'Blackletter', cursive;
     font-size: 1.3rem;
     font-weight: 600;
     color: #169B62;
